conifgured setting for prettier and formatted codebase again (some errors show because of conflict with eslint)
