# src/controllers/admin/uploads.js
@@ -1,35 +1,35 @@
-"use strict";
+'use strict';
 
-const path = require("path");
-const nconf = require("nconf");
-const fs = require("fs");
-const winston = require("winston");
+const path = require('path');
+const nconf = require('nconf');
+const fs = require('fs');
+const winston = require('winston');
 
-const meta = require("../../meta");
-const posts = require("../../posts");
-const file = require("../../file");
-const image = require("../../image");
-const plugins = require("../../plugins");
-const pagination = require("../../pagination");
+const meta = require('../../meta');
+const posts = require('../../posts');
+const file = require('../../file');
+const image = require('../../image');
+const plugins = require('../../plugins');
+const pagination = require('../../pagination');
 
 const allowedImageTypes = [
-	"image/png",
-	"image/jpeg",
-	"image/pjpeg",
-	"image/jpg",
-	"image/gif",
-	"image/svg+xml",
+	'image/png',
+	'image/jpeg',
+	'image/pjpeg',
+	'image/jpg',
+	'image/gif',
+	'image/svg+xml',
 ];
 
 const uploadsController = module.exports;
 
 uploadsController.get = async function (req, res, next) {
 	const currentFolder = path.join(
-		nconf.get("upload_path"),
-		req.query.dir || "",
+		nconf.get('upload_path'),
+		req.query.dir || ''
 	);
-	if (!currentFolder.startsWith(nconf.get("upload_path"))) {
-		return next(new Error("[[error:invalid-path]]"));
+	if (!currentFolder.startsWith(nconf.get('upload_path'))) {
+		return next(new Error('[[error:invalid-path]]'));
 	}
 	const itemsPerPage = 20;
 	const page = parseInt(req.query.page, 10) || 1;
@@ -39,7 +39,7 @@ uploadsController.get = async function (req, res, next) {
 		files = await getFilesInFolder(currentFolder);
 	} catch (err) {
 		winston.error(err.stack);
-		return next(new Error("[[error:invalid-path]]"));
+		return next(new Error('[[error:invalid-path]]'));
 	}
 	try {
 		const itemCount = files.length;
@@ -63,21 +63,21 @@ uploadsController.get = async function (req, res, next) {
 		});
 
 		// Add post usage info if in /files
-		if (["files", "/files", "/files/"].includes(req.query.dir)) {
+		if (['files', '/files', '/files/'].includes(req.query.dir)) {
 			const usage = await posts.uploads.getUsage(files);
 			files.forEach((file, idx) => {
 				file.inPids = usage[idx].map((pid) => parseInt(pid, 10));
 			});
 		}
-		res.render("admin/manage/uploads", {
-			currentFolder: currentFolder.replace(nconf.get("upload_path"), ""),
-			showPids: files.length && files[0].hasOwnProperty("inPids"),
+		res.render('admin/manage/uploads', {
+			currentFolder: currentFolder.replace(nconf.get('upload_path'), ''),
+			showPids: files.length && files[0].hasOwnProperty('inPids'),
 			files: files,
 			breadcrumbs: buildBreadcrumbs(currentFolder),
 			pagination: pagination.create(
 				page,
 				Math.ceil(itemCount / itemsPerPage),
-				req.query,
+				req.query
 			),
 		});
 	} catch (err) {
@@ -86,13 +86,13 @@ uploadsController.get = async function (req, res, next) {
 };
 
 async function checkSymLinks(folder) {
-	let dir = path.normalize(folder || "");
-	while (dir.length && dir !== ".") {
-		const nextPath = path.join(nconf.get("upload_path"), dir);
+	let dir = path.normalize(folder || '');
+	while (dir.length && dir !== '.') {
+		const nextPath = path.join(nconf.get('upload_path'), dir);
 		// eslint-disable-next-line no-await-in-loop
 		const stat = await fs.promises.lstat(nextPath);
 		if (stat.isSymbolicLink()) {
-			throw new Error("[[invalid-path]]");
+			throw new Error('[[invalid-path]]');
 		}
 		const newDir = path.dirname(dir);
 		if (newDir === dir) {
@@ -106,7 +106,7 @@ async function getFilesInFolder(folder) {
 	const dirents = await fs.promises.readdir(folder, { withFileTypes: true });
 	const files = [];
 	for await (const dirent of dirents) {
-		if (!dirent.isSymbolicLink() && dirent.name !== ".gitignore") {
+		if (!dirent.isSymbolicLink() && dirent.name !== '.gitignore') {
 			files.push(dirent.name);
 		}
 	}
@@ -116,18 +116,18 @@ async function getFilesInFolder(folder) {
 function buildBreadcrumbs(currentFolder) {
 	const crumbs = [];
 	const parts = currentFolder
-		.replace(nconf.get("upload_path"), "")
+		.replace(nconf.get('upload_path'), '')
 		.split(path.sep);
-	let currentPath = "";
+	let currentPath = '';
 	parts.forEach((part, i) => {
 		const dir = path.join(currentPath, part);
 		const crumb = {
-			text: part || "Uploads",
+			text: part || 'Uploads',
 		};
 		if (i < parts.length - 1) {
 			crumb.url = part
-				? `${nconf.get("relative_path")}/admin/manage/uploads?dir=${dir}`
-				: `${nconf.get("relative_path")}/admin/manage/uploads`;
+				? `${nconf.get('relative_path')}/admin/manage/uploads?dir=${dir}`
+				: `${nconf.get('relative_path')}/admin/manage/uploads`;
 		}
 		crumbs.push(crumb);
 		currentPath = dir;
@@ -147,10 +147,10 @@ async function getFileData(currentDir, file) {
 	if (stat.isDirectory()) {
 		filesInDir = await getFilesInFolder(pathToFile);
 	}
-	const url = `${nconf.get("upload_url") + currentDir.replace(nconf.get("upload_path"), "")}/${file}`;
+	const url = `${nconf.get('upload_url') + currentDir.replace(nconf.get('upload_path'), '')}/${file}`;
 	return {
 		name: file,
-		path: pathToFile.replace(path.join(nconf.get("upload_path"), "/"), ""),
+		path: pathToFile.replace(path.join(nconf.get('upload_path'), '/'), ''),
 		url: url,
 		fileCount: filesInDir.length,
 		size: stat.size,
@@ -169,24 +169,24 @@ uploadsController.uploadCategoryPicture = async function (req, res, next) {
 		params = JSON.parse(req.body.params);
 	} catch (e) {
 		file.delete(uploadedFile.path);
-		return next(new Error("[[error:invalid-json]]"));
+		return next(new Error('[[error:invalid-json]]'));
 	}
 
 	await validateUpload(uploadedFile, allowedImageTypes);
 	const filename = `category-${params.cid}${path.extname(uploadedFile.name)}`;
-	await uploadImage(filename, "category", uploadedFile, req, res, next);
+	await uploadImage(filename, 'category', uploadedFile, req, res, next);
 };
 
 uploadsController.uploadFavicon = async function (req, res, next) {
 	const uploadedFile = req.files.files[0];
-	const allowedTypes = ["image/x-icon", "image/vnd.microsoft.icon"];
+	const allowedTypes = ['image/x-icon', 'image/vnd.microsoft.icon'];
 
 	await validateUpload(uploadedFile, allowedTypes);
 	try {
 		const imageObj = await file.saveFileToLocal(
-			"favicon.ico",
-			"system",
-			uploadedFile.path,
+			'favicon.ico',
+			'system',
+			uploadedFile.path
 		);
 		res.json([{ name: uploadedFile.name, url: imageObj.url }]);
 	} catch (err) {
@@ -198,15 +198,15 @@ uploadsController.uploadFavicon = async function (req, res, next) {
 
 uploadsController.uploadTouchIcon = async function (req, res, next) {
 	const uploadedFile = req.files.files[0];
-	const allowedTypes = ["image/png"];
+	const allowedTypes = ['image/png'];
 	const sizes = [36, 48, 72, 96, 144, 192, 512];
 
 	await validateUpload(uploadedFile, allowedTypes);
 	try {
 		const imageObj = await file.saveFileToLocal(
-			"touchicon-orig.png",
-			"system",
-			uploadedFile.path,
+			'touchicon-orig.png',
+			'system',
+			uploadedFile.path
 		);
 		// Resize the image into squares for use as touch icons at various DPIs
 		for (const size of sizes) {
@@ -214,9 +214,9 @@ uploadsController.uploadTouchIcon = async function (req, res, next) {
 			await image.resizeImage({
 				path: uploadedFile.path,
 				target: path.join(
-					nconf.get("upload_path"),
-					"system",
-					`touchicon-${size}.png`,
+					nconf.get('upload_path'),
+					'system',
+					`touchicon-${size}.png`
 				),
 				width: size,
 				height: size,
@@ -232,14 +232,14 @@ uploadsController.uploadTouchIcon = async function (req, res, next) {
 
 uploadsController.uploadMaskableIcon = async function (req, res, next) {
 	const uploadedFile = req.files.files[0];
-	const allowedTypes = ["image/png"];
+	const allowedTypes = ['image/png'];
 
 	await validateUpload(uploadedFile, allowedTypes);
 	try {
 		const imageObj = await file.saveFileToLocal(
-			"maskableicon-orig.png",
-			"system",
-			uploadedFile.path,
+			'maskableicon-orig.png',
+			'system',
+			uploadedFile.path
 		);
 		res.json([{ name: uploadedFile.name, url: imageObj.url }]);
 	} catch (err) {
@@ -256,19 +256,19 @@ uploadsController.uploadFile = async function (req, res, next) {
 		params = JSON.parse(req.body.params);
 	} catch (e) {
 		file.delete(uploadedFile.path);
-		return next(new Error("[[error:invalid-json]]"));
+		return next(new Error('[[error:invalid-json]]'));
 	}
 
 	if (
-		!(await file.exists(path.join(nconf.get("upload_path"), params.folder)))
+		!(await file.exists(path.join(nconf.get('upload_path'), params.folder)))
 	) {
-		return next(new Error("[[error:invalid-path]]"));
+		return next(new Error('[[error:invalid-path]]'));
 	}
 	try {
 		const data = await file.saveFileToLocal(
 			uploadedFile.name,
 			params.folder,
-			uploadedFile.path,
+			uploadedFile.path
 		);
 		res.json([{ url: data.url }]);
 	} catch (err) {
@@ -279,15 +279,15 @@ uploadsController.uploadFile = async function (req, res, next) {
 };
 
 uploadsController.uploadLogo = async function (req, res, next) {
-	await upload("site-logo", req, res, next);
+	await upload('site-logo', req, res, next);
 };
 
 uploadsController.uploadDefaultAvatar = async function (req, res, next) {
-	await upload("avatar-default", req, res, next);
+	await upload('avatar-default', req, res, next);
 };
 
 uploadsController.uploadOgImage = async function (req, res, next) {
-	await upload("og:image", req, res, next);
+	await upload('og:image', req, res, next);
 };
 
 async function upload(name, req, res, next) {
@@ -295,14 +295,14 @@ async function upload(name, req, res, next) {
 
 	await validateUpload(uploadedFile, allowedImageTypes);
 	const filename = name + path.extname(uploadedFile.name);
-	await uploadImage(filename, "system", uploadedFile, req, res, next);
+	await uploadImage(filename, 'system', uploadedFile, req, res, next);
 }
 
 async function validateUpload(uploadedFile, allowedTypes) {
 	if (!allowedTypes.includes(uploadedFile.type)) {
 		file.delete(uploadedFile.path);
 		throw new Error(
-			`[[error:invalid-image-type, ${allowedTypes.join("&#44; ")}]]`,
+			`[[error:invalid-image-type, ${allowedTypes.join('&#44; ')}]]`
 		);
 	}
 }
@@ -310,8 +310,8 @@ async function validateUpload(uploadedFile, allowedTypes) {
 async function uploadImage(filename, folder, uploadedFile, req, res, next) {
 	let imageData;
 	try {
-		if (plugins.hooks.hasListeners("filter:uploadImage")) {
-			imageData = await plugins.hooks.fire("filter:uploadImage", {
+		if (plugins.hooks.hasListeners('filter:uploadImage')) {
+			imageData = await plugins.hooks.fire('filter:uploadImage', {
 				image: uploadedFile,
 				uid: req.uid,
 				folder: folder,
@@ -320,18 +320,18 @@ async function uploadImage(filename, folder, uploadedFile, req, res, next) {
 			imageData = await file.saveFileToLocal(
 				filename,
 				folder,
-				uploadedFile.path,
+				uploadedFile.path
 			);
 		}
 
 		if (
-			path.basename(filename, path.extname(filename)) === "site-logo" &&
-			folder === "system"
+			path.basename(filename, path.extname(filename)) === 'site-logo' &&
+			folder === 'system'
 		) {
 			const uploadPath = path.join(
-				nconf.get("upload_path"),
+				nconf.get('upload_path'),
 				folder,
-				"site-logo-x50.png",
+				'site-logo-x50.png'
 			);
 			await image.resizeImage({
 				path: uploadedFile.path,
@@ -339,30 +339,30 @@ async function uploadImage(filename, folder, uploadedFile, req, res, next) {
 				height: 50,
 			});
 			await meta.configs.set(
-				"brand:emailLogo",
-				path.join(nconf.get("upload_url"), "system/site-logo-x50.png"),
+				'brand:emailLogo',
+				path.join(nconf.get('upload_url'), 'system/site-logo-x50.png')
 			);
 			const size = await image.size(uploadedFile.path);
 			await meta.configs.setMultiple({
-				"brand:logo:width": size.width,
-				"brand:logo:height": size.height,
+				'brand:logo:width': size.width,
+				'brand:logo:height': size.height,
 			});
 		} else if (
-			path.basename(filename, path.extname(filename)) === "og:image" &&
-			folder === "system"
+			path.basename(filename, path.extname(filename)) === 'og:image' &&
+			folder === 'system'
 		) {
 			const size = await image.size(uploadedFile.path);
 			await meta.configs.setMultiple({
-				"og:image:width": size.width,
-				"og:image:height": size.height,
+				'og:image:width': size.width,
+				'og:image:height': size.height,
 			});
 		}
 		res.json([
 			{
 				name: uploadedFile.name,
-				url: imageData.url.startsWith("http")
+				url: imageData.url.startsWith('http')
 					? imageData.url
-					: nconf.get("relative_path") + imageData.url,
+					: nconf.get('relative_path') + imageData.url,
 			},
 		]);
 	} catch (err) {
